@@ -1,5 +1,3 @@
 					<%= nav_link("Your information", edit_account_path) %>
 					<%= nav_link("Your social Medias", social_medias_account_path) %>
 					<%= nav_link("Your Website", website_account_path) %>
-					<%= nav_link("Your stories", stories_account_path) %>
-					<li class=""><a href="#tab2" data-toggle="tab">Your Audience</a></li>
