@@ -1,1 +1,29 @@
-coucou
+<%= content_for :head_script do %>
+	<%= stylesheet_link_tag "/stylesheets/global" %>
+<% end %>
+
+	<div id="photo">
+		<h1><%= @story.title %></h1>
+		<p>
+		<%= @story.description %>
+		</p>
+
+		<%= image_tag(@photo.image_url(:web), :width => 800, :height => @photo.photo_dimension.last, :id => "main_photo" ) if @photo.image? %>
+
+		<div class="tagslist">
+
+		<% @photo.all_tags.each do |tag| %>
+			<span class="label"><%= tag.name %></span>
+		<% end %>
+		</div>
+
+	<% if @story.photos.any? %>
+		<div id="photos thumbnails" class="minis">
+			<ul>
+				<%= show_thumbs(@story, @photo) %>
+			</ul>
+		<div class="clearfix"></div>
+	</div>
+	<% end %>
+
+</div>
