@@ -67,8 +67,6 @@ Heritage::Application.routes.draw do
     resources :photos, :only => [:create, :destroy, :edit, :update, :show]
     member do
       post :sort
-    end
-    member do 
       get :editlong
       put :updatelong
     end
