@@ -1,3 +1,9 @@
+2012-12-17  Fabien Penso <fabien.penso@conovae.com>
+
+	* Atom feed
+  * Photo urls
+  * 8h
+
 2012-12-08  Fabien Penso <fabien.penso@conovae.com>
 
 	* Multiphoto edits
